--- a/frontend/src/components/TimeCard/styles.css
+++ b/frontend/src/components/TimeCard/styles.css
@@ -4,3 +4,11 @@
     border-radius: 8px 8px 0 0;
 }
 
+.dstime-card-bottom-container {
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 10px 20px 10px;
+    border-radius: 0 0 8px 8px;
+}
