Ranking de artilharia

--- a/frontend/src/pages/Artillery/styles.css
+++ b/frontend/src/pages/Artillery/styles.css
@@ -1,6 +1,15 @@
 .artillery-header {
-    width: 100%;
-    display: flex;
+
+
+    
     flex-direction: row;
     justify-content: space-between;
+}
+
+.artillery-header h1 {
+    
+   
+    text-align: center;
+    flex-direction: row;
+    justify-content: space-between; 
 }
