--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -6,14 +6,22 @@ header{
 .dstime-nav-content h1 {
     margin: 0;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 28px;
+    color: rgb(0, 0, 0);
+}
+.dstime-nav-content p {
+    margin: 0;
+    font-weight: 700;
+    font-size: 12px;
+    color: rgb(0, 0, 0);
 }
 
 .dstime-nav-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgb(22, 5, 5);
+    color: rgb(43, 40, 40);
+    
 }
 
 .dstime-fundacao-container {
