--- a/frontend/src/components/TimeCard/styles.css
+++ b/frontend/src/components/TimeCard/styles.css
@@ -3,12 +3,54 @@
     width: 100%;
     border-radius: 8px 8px 0 0;
 }
-
 .dstime-card-bottom-container {
     background-color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 15px 10px;
     border-radius: 0 0 8px 8px;
 }
+.dstime-form-container {
+    max-width: 480px;
+    margin: 40px auto;
+    padding: 20px;
+}
+
+.dstime-form-container {
+    max-width: 480px;
+    margin: 40px auto;
+    padding: 20px;
+}
+.dstime-form-container {
+    max-width: 480px;
+    margin: 40px auto;
+    padding: 20px;
+}
+
+.dstime-form {
+    width: calc(100% - 20px);
+}
+
+.dstime-form-group label {
+    font-size: 16px;
+    color: rgb(3, 2, 2);
+}
+.dstime-card-bottom-container h2 {
+    color: #4A4A4A;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    min-height: 40px;
+}
+.dstime-btn {
+    background-color: var(--color-primary);
+    font-size: 14px;
+    font-weight: 700;
+    height: 40px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+} 
