--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 
 :root {
-  --color-primary: #e6fa30;
+  --color-primary: rgb(251, 255, 44);
 }
 
 * {
