--- a/frontend/src/pages/Artillery/styles.css
+++ b/frontend/src/pages/Artillery/styles.css
@@ -1,9 +1,23 @@
 .artillery-header {
     flex-direction: row;
     justify-content: space-between;
+    
 }
 
 .artillery-header h1 {
     text-align: center;
     
+}
+
+.table th {
+    background-color: rgb(251, 255, 44);
+    
+}
+.artillery-header button:hover,
+.nav-menu  > a {
+    color: rgb(68, 0, 255);
+}
+
+.table {
+    width: 50%;
 }
