--- a/frontend/src/pages/Ranking/styles.css
+++ b/frontend/src/pages/Ranking/styles.css
@@ -1,10 +1,9 @@
 .ranking{
  
 
-    background-color: rgb(255, 255, 255);
+    background-color: #fff6f6f6;
     display: flex;
-   
-        
+         
     padding: 2px 10px 15px 10px;
     border-radius: 0 0 8px 8px;
 }
