--- a/frontend/src/pages/Ranking/styles.css
+++ b/frontend/src/pages/Ranking/styles.css
@@ -1,7 +1,7 @@
 .ranking{
  
 
-    background-color: #fff6f6f6;
+    /*background-color: #fff6f6f6;*/
     display: flex;
          
     padding: 2px 10px 15px 10px;
