--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 }
 
 html, body {
-  background-color: rgb(231, 231, 231);
+  background-color: #e7e7e7;
   min-height: 100%;
   position: relative;
     height: 200px;
